psl/psl/tests/validation/preview_features/partial_indexes/no_preview_feature.prisma
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id       Int     @id
  email    String  @unique
  isActive Boolean @default(true)

  @@index([email], where: "isActive = true")
}
// error: Error parsing attribute "@@index": You have a partial index definition. Partial indexes are currently a preview feature. To use partial indexes, please add "partialIndexes" to the preview features.
//   -->  schema.prisma:15
//    | 
// 14 | 
// 15 |   @@index([email], where: "isActive = true")
//    | 
